--- a/index.html
+++ b/index.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./public/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Ohmyfood</title>
 </head>
+
 <body>
-    <h1>Test</h1>
+    <header>
+        <h1>Ohmyfood</h1>
+    </header>
+
+    <main>
+        <section class="localisation">
+            <i class="fas fa-map-marker-alt localisation__icon"></i>
+
+            <span class="localisation_text">
+                Paris, Belleville
+
+            </span>
+        </section>
+
+        <section class="hero">
+            <h2>Réservez le menu qui vous convient</h2>
+            <p> Découvrez des restaurants d'exception, séléctionnés par nos soins. </p>
+            <a href="#" class="hero_btn"> Explorer nos restaurants</a>
+        </section>
+
+    </main>
+
 </body>
+
 </html>
