--- a/index.html
+++ b/index.html
@@ -32,9 +32,35 @@
         <section class="hero">
             <h2>Réservez le menu qui vous convient</h2>
             <p> Découvrez des restaurants d'exception, séléctionnés par nos soins. </p>
-            <a href="#" class="hero_btn"> Explorer nos restaurants</a>
+            <a href="#" class="btn"> Explorer nos restaurants</a>
         </section>
 
+        <section class="fonct">
+            <h2>Fonctionnement</h2>
+            <div class="fonct_container">
+
+
+                <div class="fonct_card">
+                    <div class="fonct_number">1</div>
+                    <i class="fa-mobile-alt fas fonct_icon"></i>
+                    <p class="fonct_text">Choisissez un restaurant</p>
+                </div>
+
+                <div class="fonct_card">
+                    <div class="fonct_number">2</div>
+                    <i class="fa-list-ul fas fonct_icon"></i>
+                    <p class="fonct_text">Composez votre menu</p>
+                </div>
+
+                <div class="fonct_card">
+                    <div class="fonct_number">3</div>
+                    <i class="fa-store fas fonct_icon"></i>
+                    <p class="fonct_text">Dégustez au restaurant</p>
+                </div>
+
+
+            </div>
+        </section>
     </main>
 
 </body>
