ajout section restaurant

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </header>
 
     <main>
+        <!-- !? Section localisation -->
         <section class="localisation">
             <i class="fas fa-map-marker-alt localisation__icon"></i>
 
@@ -29,16 +30,19 @@
             </span>
         </section>
 
+        <!-- !? Section Hero -->
+
         <section class="hero">
             <h2>Réservez le menu qui vous convient</h2>
             <p> Découvrez des restaurants d'exception, séléctionnés par nos soins. </p>
             <a href="#" class="btn"> Explorer nos restaurants</a>
         </section>
 
+        <!-- !? Section Fonctionnement -->
+
         <section class="fonct">
             <h2>Fonctionnement</h2>
             <div class="fonct_container">
-
 
                 <div class="fonct_card">
                     <div class="fonct_number">1</div>
@@ -58,9 +62,38 @@
                     <p class="fonct_text">Dégustez au restaurant</p>
                 </div>
 
-
             </div>
         </section>
+
+        <section class="resto">
+            <div class="container">
+
+                <h2>Restaurants</h2>
+                
+                <div class="card">
+                    <div class="card_img">
+                        <img src="./public/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Palette du gout">
+                    </div>
+
+                        <h3>La palette du goût</h3>
+                        <div class="card_text">
+                        <p>Ménilmontant</p>
+                        <i class=" fa-2x far fa-heart card_icon"></i>                          
+                    </div>
+                </div>
+                
+
+
+
+
+
+
+
+
+
+
+            </div>
+         </section>
     </main>
 
 </body>
