--- a/index.html
+++ b/index.html
@@ -64,29 +64,60 @@
 
             </div>
         </section>
+        <!-- !? Section Restaurants -->
 
         <section class="resto">
             <div class="container">
 
                 <h2>Restaurants</h2>
-                
+
                 <div class="card">
-                    <div class="card_img">
+                    <div class="card__img">
                         <img src="./public/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Palette du gout">
+                        <div class="card__tag">Nouveau</div>
                     </div>
-                        <h3>La palette du goût</h3>
-                        <div class="card_text">
+                    <h3>La palette du goût</h3>
+                    <div class="card__text">
                         <p>Ménilmontant</p>
-                        <i class=" fa-2x far fa-heart card_icon"></i>                          
+                        <i class=" far fa-heart fa-2x card__icon"></i>
                     </div>
                 </div>
-                
 
 
+                <div class="card">
+                    <div class="card__img">
+                        <img src="./public/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                        <div class="card__tag">Nouveau</div>
+                    </div>
+                    <h3>La note enchantée</h3>
+                    <div class="card__text">
+                        <p>Charonne</p>
+                        <i class=" far fa-heart fa-2x card__icon"></i>
+                    </div>
+                </div>
 
 
+                <div class="card">
+                    <div class="card__img">
+                        <img src="./public/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+                    </div>
+                    <h3>À la française </h3>
+                    <div class="card__text">
+                        <p>Cité Rouge</p>
+                        <i class=" far fa-heart fa-2x card__icon"></i>
+                    </div>
+                </div>
 
-
+                <div class="card">
+                    <div class="card__img">
+                        <img src="./public/img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                    </div>
+                    <h3>Le délice des sens</h3>
+                    <div class="card__text">
+                        <p>Folie-Méricourt</p>
+                        <i class=" far fa-heart fa-2x card__icon"></i>
+                    </div>
+                </div>
 
 
 
