ajout des pages menu

--- a/menu-la-palette-du-gout.html
+++ b/menu-la-palette-du-gout.html
@@ -25,12 +25,12 @@
         </div>
 
     </header>
-    <img class="bg-hero" src="./public/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="background">
+    <img class="bg-hero" src="./public/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="background">
     <main class="main-menu">
         <div class="container-menu">
 
             <div class="hero-menu">
-                <h2 class="hero-menu__titre">À la française</h2>
+                <h2 class="hero-menu__titre">La palette du goût</h2>
                 <i class=" hero-menu__logo far fa-heart fa-2x"></i>
             </div>
 
@@ -41,10 +41,12 @@
                 <!-- ! Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Tarte de poulpe acidulé</h4>
+                    <h4 class="food__titre">Fricassée d'escargot
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Aux zests d'orange</p>
+                        <p>Au piment d'Espelette 
+                        </p>
                         <div class="food__price">25€</div>
                     </div>
 
@@ -53,10 +55,12 @@
                 <!-- ! fin Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Velouté de légumes d'antan</h4>
+                    <h4 class="food__titre">Foie gras de canard mi-cuit
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Carotte, panais, topinambour</p>
+                        <p>Et ses copeaux de truffe noire
+                        </p>
                         <div class="food__price">35€</div>
                     </div>
 
@@ -65,10 +69,12 @@
                 <!-- ! fin Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Soupe à l'oignon</h4>
+                    <h4 class="food__titre">Oeuf au plat
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Revisitée</p>
+                        <p>Assaisonné à la truffe sur lit de caviar
+                        </p>
                         <div class="food__price">20€</div>
                     </div>
 
@@ -87,10 +93,12 @@
                 <!-- ! Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Coquilles Saint-Jacques</h4>
+                    <h4 class="food__titre">Filet de boeuf aux herbes
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Accompagnées d'une purée de panais</p>
+                        <p>Accompagné de sa ribambelle de légumes
+                        </p>
                         <div class="food__price">40€</div>
                     </div>
 
@@ -99,10 +107,12 @@
                 <!-- ! fin Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Magret de canard</h4>
+                    <h4 class="food__titre">Parmentier de queue de boeuf
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Et parmentier de pommes de terre</p>
+                        <p>À la truffe noire sur sa purée de panais
+                        </p>
                         <div class="food__price">35€</div>
                     </div>
 
@@ -111,10 +121,12 @@
                 <!-- ! fin Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Pigeonneau d’Ille-et-Vilaine</h4>
+                    <h4 class="food__titre">Filet de turbot
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <p>Aux agrumes
+                        </p>
                         <div class="food__price">44€</div>
                     </div>
 
@@ -133,10 +145,12 @@
                 <!-- ! Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Pétales de violettes glacés</h4>
+                    <h4 class="food__titre">Paris-Brest
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Et purée de noisettes</p>
+                        <p>Revisité
+                        </p>
                         <div class="food__price">18€</div>
                     </div>
 
@@ -145,10 +159,12 @@
                 <!-- ! fin Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Fondant au chocolat</h4>
+                    <h4 class="food__titre">Macaron au chocolat d'exception 
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Revisité</p>
+                        <p>Et glace à la vanille de Madagascar
+                        </p>
                         <div class="food__price">22€</div>
                     </div>
 
@@ -157,10 +173,12 @@
                 <!-- ! fin Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Millefeuille croustillant</h4>
+                    <h4 class="food__titre">Mousse au chocolat 
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Myrtilles et pâte d’amande</p>
+                        <p>Au piment d'Espelette et à la truffe noire
+                        </p>
                         <div class="food__price">23€</div>
                     </div>
 
