--- a/menu-le-delice-des-sens.html
+++ b/menu-le-delice-des-sens.html
@@ -25,12 +25,12 @@
         </div>
 
     </header>
-    <img class="bg-hero" src="./public/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="background">
+    <img class="bg-hero" src="./public/img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="background">
     <main class="main-menu">
         <div class="container-menu">
 
             <div class="hero-menu">
-                <h2 class="hero-menu__titre">À la française</h2>
+                <h2 class="hero-menu__titre">Le délice des sens</h2>
                 <i class=" hero-menu__logo far fa-heart fa-2x"></i>
             </div>
 
@@ -41,10 +41,12 @@
                 <!-- ! Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Tarte de poulpe acidulé</h4>
+                    <h4 class="food__titre">Tartare de thon
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Aux zests d'orange</p>
+                        <p>Assaisonné au yuzu
+                        </p>
                         <div class="food__price">25€</div>
                     </div>
 
@@ -53,10 +55,12 @@
                 <!-- ! fin Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Velouté de légumes d'antan</h4>
+                    <h4 class="food__titre">Bouchée de homard croustillant
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Carotte, panais, topinambour</p>
+                        <p>Et sa farandole de petits légumes
+                        </p>
                         <div class="food__price">35€</div>
                     </div>
 
@@ -65,10 +69,12 @@
                 <!-- ! fin Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Soupe à l'oignon</h4>
+                    <h4 class="food__titre">Velouté de cèpes
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Revisitée</p>
+                        <p>Aux truffes
+                        </p>
                         <div class="food__price">20€</div>
                     </div>
 
@@ -87,10 +93,12 @@
                 <!-- ! Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Coquilles Saint-Jacques</h4>
+                    <h4 class="food__titre">Poulet rôti aux herbes de Provence
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Accompagnées d'une purée de panais</p>
+                        <p>Et sa crème de truffe
+                        </p>
                         <div class="food__price">40€</div>
                     </div>
 
@@ -99,10 +107,12 @@
                 <!-- ! fin Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Magret de canard</h4>
+                    <h4 class="food__titre">Langouste rôtie
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Et parmentier de pommes de terre</p>
+                        <p>Et ses légumes de saison
+                        </p>
                         <div class="food__price">35€</div>
                     </div>
 
@@ -111,10 +121,12 @@
                 <!-- ! fin Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Pigeonneau d’Ille-et-Vilaine</h4>
+                    <h4 class="food__titre">Côte de boeuf Angus
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <p>Et sa purée de panais
+                        </p>
                         <div class="food__price">44€</div>
                     </div>
 
@@ -133,10 +145,12 @@
                 <!-- ! Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Pétales de violettes glacés</h4>
+                    <h4 class="food__titre">Farandole de desserts
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Et purée de noisettes</p>
+                        <p>Du chef
+                        </p>
                         <div class="food__price">18€</div>
                     </div>
 
@@ -145,10 +159,12 @@
                 <!-- ! fin Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Fondant au chocolat</h4>
+                    <h4 class="food__titre">Crème brulée
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Revisité</p>
+                        <p>Revisitée
+                        </p>
                         <div class="food__price">22€</div>
                     </div>
 
@@ -157,10 +173,12 @@
                 <!-- ! fin Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Millefeuille croustillant</h4>
+                    <h4 class="food__titre">Tiramisu
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Myrtilles et pâte d’amande</p>
+                        <p>À la noisette
+                        </p>
                         <div class="food__price">23€</div>
                     </div>
 
