--- a/menu-la-note-enchantée.html
+++ b/menu-la-note-enchantée.html
@@ -25,12 +25,12 @@
         </div>
 
     </header>
-    <img class="bg-hero" src="./public/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="background">
+    <img class="bg-hero" src="./public/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="background">
     <main class="main-menu">
         <div class="container-menu">
 
             <div class="hero-menu">
-                <h2 class="hero-menu__titre">À la française</h2>
+                <h2 class="hero-menu__titre">La note enchantée</h2>
                 <i class=" hero-menu__logo far fa-heart fa-2x"></i>
             </div>
 
@@ -41,10 +41,11 @@
                 <!-- ! Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Tarte de poulpe acidulé</h4>
+                    <h4 class="food__titre">Ravioles de foie gras</h4>
 
                     <div class="food__flex">
-                        <p>Aux zests d'orange</p>
+                        <p>Accompagnés de leur crème à la truffe
+                        </p>
                         <div class="food__price">25€</div>
                     </div>
 
@@ -53,10 +54,11 @@
                 <!-- ! fin Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Velouté de légumes d'antan</h4>
+                    <h4 class="food__titre">Caviar osciètre</h4>
 
                     <div class="food__flex">
-                        <p>Carotte, panais, topinambour</p>
+                        <p>Sur blini à la farine de blé noir
+                        </p>
                         <div class="food__price">35€</div>
                     </div>
 
@@ -65,16 +67,33 @@
                 <!-- ! fin Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Soupe à l'oignon</h4>
+                    <h4 class="food__titre">Homard et espuma de potiron
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Revisitée</p>
+                        <p>Mariné aux zestes d'orange
+                        </p>
                         <div class="food__price">20€</div>
                     </div>
 
                 </div>
 
                 <!-- ! fin Card food -->
+
+                <div class="food__card">
+                    <h4 class="food__titre">Foie gras de canard cuit entier
+                    </h4>
+
+                    <div class="food__flex">
+                        <p>Confiture de figue et pain toasté
+                        </p>
+                        <div class="food__price">35€</div>
+                    </div>
+
+                </div>
+
+                <!-- ! fin Card food -->
+
 
             </section>
             <!-- ? FIN Section food -->
@@ -87,10 +106,11 @@
                 <!-- ! Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Coquilles Saint-Jacques</h4>
+                    <h4 class="food__titre">Noix de coquilles Saint-Jacques</h4>
 
                     <div class="food__flex">
-                        <p>Accompagnées d'une purée de panais</p>
+                        <p>Sur lit de purée de céleri-rave
+                        </p>
                         <div class="food__price">40€</div>
                     </div>
 
@@ -99,10 +119,12 @@
                 <!-- ! fin Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Magret de canard</h4>
+                    <h4 class="food__titre">Langoustine poêlée
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Et parmentier de pommes de terre</p>
+                        <p>Purée de patate douce
+                        </p>
                         <div class="food__price">35€</div>
                     </div>
 
@@ -111,10 +133,12 @@
                 <!-- ! fin Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Pigeonneau d’Ille-et-Vilaine</h4>
+                    <h4 class="food__titre">Mijoté de queue de boeuf 
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <p>Et riz sauvage aux zestes de citron
+                        </p>
                         <div class="food__price">44€</div>
                     </div>
 
@@ -133,10 +157,12 @@
                 <!-- ! Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Pétales de violettes glacés</h4>
+                    <h4 class="food__titre">Macaron noisette et chocolat
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Et purée de noisettes</p>
+                        <p>Glace au caramel brun et sel de Guérande
+                        </p>
                         <div class="food__price">18€</div>
                     </div>
 
@@ -145,10 +171,12 @@
                 <!-- ! fin Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Fondant au chocolat</h4>
+                    <h4 class="food__titre">Baba au rhum revisité 
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Revisité</p>
+                        <p>Avec son coulis de citron
+                        </p>
                         <div class="food__price">22€</div>
                     </div>
 
@@ -157,10 +185,11 @@
                 <!-- ! fin Card food -->
 
                 <div class="food__card">
-                    <h4 class="food__titre">Millefeuille croustillant</h4>
+                    <h4 class="food__titre">Tarte au citron meringuée 
+                    </h4>
 
                     <div class="food__flex">
-                        <p>Myrtilles et pâte d’amande</p>
+                        <p>Déstructurée</p>
                         <div class="food__price">23€</div>
                     </div>
 
