--- a/menu-a-la-française.html
+++ b/menu-a-la-française.html
@@ -37,45 +37,45 @@
             <!-- ? Section food entrée -->
             <section class="food">
                 <h3>Entrées</h3>
+                <div class="flex-menu">
+                    <!-- ! Card food -->
 
-                <!-- ! Card food -->
+                    <div class="food__card">
+                        <h4 class="food__titre">Tarte de poulpe acidulé</h4>
 
-                <div class="food__card">
-                    <h4 class="food__titre">Tarte de poulpe acidulé</h4>
+                        <div class="food__flex">
+                            <p>Aux zests d'orange</p>
+                            <div class="food__price">25€</div>
+                        </div>
 
-                    <div class="food__flex">
-                        <p>Aux zests d'orange</p>
-                        <div class="food__price">25€</div>
                     </div>
 
-                </div>
+                    <!-- ! fin Card food -->
 
-                <!-- ! fin Card food -->
+                    <div class="food__card">
+                        <h4 class="food__titre">Velouté de légumes d'antan</h4>
 
-                <div class="food__card">
-                    <h4 class="food__titre">Velouté de légumes d'antan</h4>
+                        <div class="food__flex">
+                            <p>Carotte, panais, topinambour</p>
+                            <div class="food__price">35€</div>
+                        </div>
 
-                    <div class="food__flex">
-                        <p>Carotte, panais, topinambour</p>
-                        <div class="food__price">35€</div>
                     </div>
 
-                </div>
+                    <!-- ! fin Card food -->
 
-                <!-- ! fin Card food -->
+                    <div class="food__card">
+                        <h4 class="food__titre">Soupe à l'oignon</h4>
 
-                <div class="food__card">
-                    <h4 class="food__titre">Soupe à l'oignon</h4>
+                        <div class="food__flex">
+                            <p>Revisitée</p>
+                            <div class="food__price">20€</div>
+                        </div>
 
-                    <div class="food__flex">
-                        <p>Revisitée</p>
-                        <div class="food__price">20€</div>
                     </div>
 
+                    <!-- ! fin Card food -->
                 </div>
-
-                <!-- ! fin Card food -->
-
             </section>
             <!-- ? FIN Section food -->
 
@@ -83,6 +83,7 @@
             <!-- ? Section food plats -->
             <section class="food">
                 <h3>Plats</h3>
+                <div class="flex-menu">
 
                 <!-- ! Card food -->
 
@@ -121,7 +122,7 @@
                 </div>
 
                 <!-- ! fin Card food -->
-
+                </div>
             </section>
             <!-- ? FIN Section food -->
 
@@ -129,6 +130,7 @@
             <!-- ? Section food desserts -->
             <section class="food">
                 <h3>Desserts</h3>
+                <div class="flex-menu">
 
                 <!-- ! Card food -->
 
@@ -167,7 +169,7 @@
                 </div>
 
                 <!-- ! fin Card food -->
-
+                </div>
             </section>
             <!-- ? FIN Section food -->
         </div>
