--- a/menu-la-note-enchantée.html
+++ b/menu-la-note-enchantée.html
@@ -37,6 +37,7 @@
             <!-- ? Section food entrée -->
             <section class="food">
                 <h3>Entrées</h3>
+                <div class="flex-menu">
 
                 <!-- ! Card food -->
 
@@ -94,7 +95,7 @@
 
                 <!-- ! fin Card food -->
 
-
+                </div>
             </section>
             <!-- ? FIN Section food -->
 
@@ -102,6 +103,7 @@
             <!-- ? Section food plats -->
             <section class="food">
                 <h3>Plats</h3>
+                <div class="flex-menu">
 
                 <!-- ! Card food -->
 
@@ -145,7 +147,7 @@
                 </div>
 
                 <!-- ! fin Card food -->
-
+                </div>
             </section>
             <!-- ? FIN Section food -->
 
@@ -153,6 +155,7 @@
             <!-- ? Section food desserts -->
             <section class="food">
                 <h3>Desserts</h3>
+                <div class="flex-menu">
 
                 <!-- ! Card food -->
 
@@ -196,7 +199,7 @@
                 </div>
 
                 <!-- ! fin Card food -->
-
+                </div>
             </section>
             <!-- ? FIN Section food -->
         </div>
