--- a/menu-la-palette-du-gout.html
+++ b/menu-la-palette-du-gout.html
@@ -37,6 +37,7 @@
             <!-- ? Section food entrée -->
             <section class="food">
                 <h3>Entrées</h3>
+                <div class="flex-menu">
 
                 <!-- ! Card food -->
 
@@ -81,7 +82,7 @@
                 </div>
 
                 <!-- ! fin Card food -->
-
+                </div>
             </section>
             <!-- ? FIN Section food -->
 
@@ -89,6 +90,7 @@
             <!-- ? Section food plats -->
             <section class="food">
                 <h3>Plats</h3>
+                <div class="flex-menu">
 
                 <!-- ! Card food -->
 
@@ -133,7 +135,7 @@
                 </div>
 
                 <!-- ! fin Card food -->
-
+                </div>
             </section>
             <!-- ? FIN Section food -->
 
@@ -141,6 +143,7 @@
             <!-- ? Section food desserts -->
             <section class="food">
                 <h3>Desserts</h3>
+                <div class="flex-menu">
 
                 <!-- ! Card food -->
 
@@ -185,7 +188,7 @@
                 </div>
 
                 <!-- ! fin Card food -->
-
+                </div>
             </section>
             <!-- ? FIN Section food -->
         </div>
