--- a/index.html
+++ b/index.html
@@ -15,9 +15,18 @@
 </head>
 
 <body>
+
+    <div class="loader">
+        <i class="fa-utensils fas fork"></i>
+
+
+    </div>
+    
     <header>
         <h1 class="home-header">Ohmyfood</h1>
     </header>
+
+  
 
     <main>
         <!-- !? Section localisation -->
@@ -70,7 +79,7 @@
             <h2>Restaurants</h2>
             <div class="resto-container">
 
-               
+
 
                 <div class="card">
                     <a href="./menu-la-palette-du-gout.html">
@@ -81,7 +90,11 @@
                         <h3>La palette du goût</h3>
                         <div class="card__text">
                             <p>Ménilmontant</p>
-                            <i class=" far fa-heart fa-2x card__icon"></i>
+                            <svg class="heart card__icon" viewBox="0 0 800 700"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="m263.42 235.15c-66.24 0-120 53.76-120 120 0 134.76 135.93 170.09 228.56 303.31 87.574-132.4 228.56-172.86 228.56-303.31 0-66.24-53.76-120-120-120-48.048 0-89.402 28.37-108.56 69.188-19.161-40.817-60.514-69.188-108.56-69.188z" />
+                            </svg>
                         </div>
                     </a>
                 </div>
@@ -96,8 +109,11 @@
                         <h3>La note enchantée</h3>
                         <div class="card__text">
                             <p>Charonne</p>
-                            <i class=" far fa-heart fa-2x card__icon"></i>
-                        </div>
+                            <svg class="heart card__icon" viewBox="0 0 800 700"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="m263.42 235.15c-66.24 0-120 53.76-120 120 0 134.76 135.93 170.09 228.56 303.31 87.574-132.4 228.56-172.86 228.56-303.31 0-66.24-53.76-120-120-120-48.048 0-89.402 28.37-108.56 69.188-19.161-40.817-60.514-69.188-108.56-69.188z" />
+                        </svg>                        </div>
                     </a>
                 </div>
 
@@ -110,8 +126,11 @@
                         <h3>À la française </h3>
                         <div class="card__text">
                             <p>Cité Rouge</p>
-                            <i class=" far fa-heart fa-2x card__icon"></i>
-                        </div>
+                            <svg class="heart card__icon" viewBox="0 0 800 700"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="m263.42 235.15c-66.24 0-120 53.76-120 120 0 134.76 135.93 170.09 228.56 303.31 87.574-132.4 228.56-172.86 228.56-303.31 0-66.24-53.76-120-120-120-48.048 0-89.402 28.37-108.56 69.188-19.161-40.817-60.514-69.188-108.56-69.188z" />
+                        </svg>                        </div>
                     </a>
                 </div>
 
@@ -125,8 +144,11 @@
                         <h3>Le délice des sens</h3>
                         <div class="card__text">
                             <p>Folie-Méricourt</p>
-                            <i class=" far fa-heart fa-2x card__icon"></i>
-                        </div>
+                            <svg class="heart card__icon" viewBox="0 0 800 700"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="m263.42 235.15c-66.24 0-120 53.76-120 120 0 134.76 135.93 170.09 228.56 303.31 87.574-132.4 228.56-172.86 228.56-303.31 0-66.24-53.76-120-120-120-48.048 0-89.402 28.37-108.56 69.188-19.161-40.817-60.514-69.188-108.56-69.188z" />
+                        </svg>                        </div>
                     </a>
                 </div>
             </div>
