--- a/menu-le-delice-des-sens.html
+++ b/menu-le-delice-des-sens.html
@@ -31,7 +31,10 @@
 
             <div class="hero-menu">
                 <h2 class="hero-menu__titre">Le délice des sens</h2>
-                <i class=" hero-menu__logo far fa-heart fa-2x"></i>
+                <svg class="heart card__icon" viewBox="0 0 800 700" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="m263.42 235.15c-66.24 0-120 53.76-120 120 0 134.76 135.93 170.09 228.56 303.31 87.574-132.4 228.56-172.86 228.56-303.31 0-66.24-53.76-120-120-120-48.048 0-89.402 28.37-108.56 69.188-19.161-40.817-60.514-69.188-108.56-69.188z" />
+                </svg>
             </div>
 
             <!-- ? Section food entrée -->
@@ -39,49 +42,49 @@
                 <h3>Entrées</h3>
                 <div class="flex-menu">
 
-                <!-- ! Card food -->
+                    <!-- ! Card food -->
 
-                <div class="food__card">
-                    <h4 class="food__titre">Tartare de thon
-                    </h4>
+                    <div class="food__card">
+                        <h4 class="food__titre">Tartare de thon
+                        </h4>
 
-                    <div class="food__flex">
-                        <p>Assaisonné au yuzu
-                        </p>
-                        <div class="food__price">25€</div>
+                        <div class="food__flex">
+                            <p>Assaisonné au yuzu
+                            </p>
+                            <div class="food__price">25€</div>
+                        </div>
+
                     </div>
 
-                </div>
+                    <!-- ! fin Card food -->
 
-                <!-- ! fin Card food -->
+                    <div class="food__card">
+                        <h4 class="food__titre">Bouchée de homard croustillant
+                        </h4>
 
-                <div class="food__card">
-                    <h4 class="food__titre">Bouchée de homard croustillant
-                    </h4>
+                        <div class="food__flex">
+                            <p>Et sa farandole de petits légumes
+                            </p>
+                            <div class="food__price">35€</div>
+                        </div>
 
-                    <div class="food__flex">
-                        <p>Et sa farandole de petits légumes
-                        </p>
-                        <div class="food__price">35€</div>
                     </div>
 
-                </div>
+                    <!-- ! fin Card food -->
 
-                <!-- ! fin Card food -->
+                    <div class="food__card">
+                        <h4 class="food__titre">Velouté de cèpes
+                        </h4>
 
-                <div class="food__card">
-                    <h4 class="food__titre">Velouté de cèpes
-                    </h4>
+                        <div class="food__flex">
+                            <p>Aux truffes
+                            </p>
+                            <div class="food__price">20€</div>
+                        </div>
 
-                    <div class="food__flex">
-                        <p>Aux truffes
-                        </p>
-                        <div class="food__price">20€</div>
                     </div>
 
-                </div>
-
-                <!-- ! fin Card food -->
+                    <!-- ! fin Card food -->
                 </div>
             </section>
             <!-- ? FIN Section food -->
@@ -92,49 +95,49 @@
                 <h3>Plats</h3>
                 <div class="flex-menu">
 
-                <!-- ! Card food -->
+                    <!-- ! Card food -->
 
-                <div class="food__card">
-                    <h4 class="food__titre">Poulet rôti aux herbes de Provence
-                    </h4>
+                    <div class="food__card">
+                        <h4 class="food__titre">Poulet rôti aux herbes de Provence
+                        </h4>
 
-                    <div class="food__flex">
-                        <p>Et sa crème de truffe
-                        </p>
-                        <div class="food__price">40€</div>
+                        <div class="food__flex">
+                            <p>Et sa crème de truffe
+                            </p>
+                            <div class="food__price">40€</div>
+                        </div>
+
                     </div>
 
-                </div>
+                    <!-- ! fin Card food -->
 
-                <!-- ! fin Card food -->
+                    <div class="food__card">
+                        <h4 class="food__titre">Langouste rôtie
+                        </h4>
 
-                <div class="food__card">
-                    <h4 class="food__titre">Langouste rôtie
-                    </h4>
+                        <div class="food__flex">
+                            <p>Et ses légumes de saison
+                            </p>
+                            <div class="food__price">35€</div>
+                        </div>
 
-                    <div class="food__flex">
-                        <p>Et ses légumes de saison
-                        </p>
-                        <div class="food__price">35€</div>
                     </div>
 
-                </div>
+                    <!-- ! fin Card food -->
 
-                <!-- ! fin Card food -->
+                    <div class="food__card">
+                        <h4 class="food__titre">Côte de boeuf Angus
+                        </h4>
 
-                <div class="food__card">
-                    <h4 class="food__titre">Côte de boeuf Angus
-                    </h4>
+                        <div class="food__flex">
+                            <p>Et sa purée de panais
+                            </p>
+                            <div class="food__price">44€</div>
+                        </div>
 
-                    <div class="food__flex">
-                        <p>Et sa purée de panais
-                        </p>
-                        <div class="food__price">44€</div>
                     </div>
 
-                </div>
-
-                <!-- ! fin Card food -->
+                    <!-- ! fin Card food -->
                 </div>
             </section>
             <!-- ? FIN Section food -->
@@ -145,49 +148,49 @@
                 <h3>Desserts</h3>
                 <div class="flex-menu">
 
-                <!-- ! Card food -->
+                    <!-- ! Card food -->
 
-                <div class="food__card">
-                    <h4 class="food__titre">Farandole de desserts
-                    </h4>
+                    <div class="food__card">
+                        <h4 class="food__titre">Farandole de desserts
+                        </h4>
 
-                    <div class="food__flex">
-                        <p>Du chef
-                        </p>
-                        <div class="food__price">18€</div>
+                        <div class="food__flex">
+                            <p>Du chef
+                            </p>
+                            <div class="food__price">18€</div>
+                        </div>
+
                     </div>
 
-                </div>
+                    <!-- ! fin Card food -->
 
-                <!-- ! fin Card food -->
+                    <div class="food__card">
+                        <h4 class="food__titre">Crème brulée
+                        </h4>
 
-                <div class="food__card">
-                    <h4 class="food__titre">Crème brulée
-                    </h4>
+                        <div class="food__flex">
+                            <p>Revisitée
+                            </p>
+                            <div class="food__price">22€</div>
+                        </div>
 
-                    <div class="food__flex">
-                        <p>Revisitée
-                        </p>
-                        <div class="food__price">22€</div>
                     </div>
 
-                </div>
+                    <!-- ! fin Card food -->
 
-                <!-- ! fin Card food -->
+                    <div class="food__card">
+                        <h4 class="food__titre">Tiramisu
+                        </h4>
 
-                <div class="food__card">
-                    <h4 class="food__titre">Tiramisu
-                    </h4>
+                        <div class="food__flex">
+                            <p>À la noisette
+                            </p>
+                            <div class="food__price">23€</div>
+                        </div>
 
-                    <div class="food__flex">
-                        <p>À la noisette
-                        </p>
-                        <div class="food__price">23€</div>
                     </div>
 
-                </div>
-
-                <!-- ! fin Card food -->
+                    <!-- ! fin Card food -->
                 </div>
             </section>
             <!-- ? FIN Section food -->
