--- a/menu-a-la-française.html
+++ b/menu-a-la-française.html
@@ -31,11 +31,14 @@
 
             <div class="hero-menu">
                 <h2 class="hero-menu__titre">À la française</h2>
-                <i class=" hero-menu__logo far fa-heart fa-2x"></i>
+                <svg class="heart card__icon" viewBox="0 0 800 700" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="m263.42 235.15c-66.24 0-120 53.76-120 120 0 134.76 135.93 170.09 228.56 303.31 87.574-132.4 228.56-172.86 228.56-303.31 0-66.24-53.76-120-120-120-48.048 0-89.402 28.37-108.56 69.188-19.161-40.817-60.514-69.188-108.56-69.188z" />
+                </svg>
             </div>
 
             <!-- ? Section food entrée -->
-            <section class="food">
+            <section class="food food_1">
                 <h3>Entrées</h3>
                 <div class="flex-menu">
                     <!-- ! Card food -->
@@ -81,94 +84,94 @@
 
 
             <!-- ? Section food plats -->
-            <section class="food">
+            <section class="food food_2">
                 <h3>Plats</h3>
                 <div class="flex-menu">
 
-                <!-- ! Card food -->
+                    <!-- ! Card food -->
 
-                <div class="food__card">
-                    <h4 class="food__titre">Coquilles Saint-Jacques</h4>
+                    <div class="food__card">
+                        <h4 class="food__titre">Coquilles Saint-Jacques</h4>
 
-                    <div class="food__flex">
-                        <p>Accompagnées d'une purée de panais</p>
-                        <div class="food__price">40€</div>
+                        <div class="food__flex">
+                            <p>Accompagnées d'une purée de panais</p>
+                            <div class="food__price">40€</div>
+                        </div>
+
                     </div>
 
-                </div>
+                    <!-- ! fin Card food -->
 
-                <!-- ! fin Card food -->
+                    <div class="food__card">
+                        <h4 class="food__titre">Magret de canard</h4>
 
-                <div class="food__card">
-                    <h4 class="food__titre">Magret de canard</h4>
+                        <div class="food__flex">
+                            <p>Et parmentier de pommes de terre</p>
+                            <div class="food__price">35€</div>
+                        </div>
 
-                    <div class="food__flex">
-                        <p>Et parmentier de pommes de terre</p>
-                        <div class="food__price">35€</div>
                     </div>
 
-                </div>
+                    <!-- ! fin Card food -->
 
-                <!-- ! fin Card food -->
+                    <div class="food__card">
+                        <h4 class="food__titre">Pigeonneau d’Ille-et-Vilaine</h4>
 
-                <div class="food__card">
-                    <h4 class="food__titre">Pigeonneau d’Ille-et-Vilaine</h4>
+                        <div class="food__flex">
+                            <p>Sur son lit de gnocchis aux légumes</p>
+                            <div class="food__price">44€</div>
+                        </div>
 
-                    <div class="food__flex">
-                        <p>Sur son lit de gnocchis aux légumes</p>
-                        <div class="food__price">44€</div>
                     </div>
 
-                </div>
-
-                <!-- ! fin Card food -->
+                    <!-- ! fin Card food -->
                 </div>
             </section>
             <!-- ? FIN Section food -->
 
 
             <!-- ? Section food desserts -->
-            <section class="food">
+            <section class="food food_3">
                 <h3>Desserts</h3>
                 <div class="flex-menu">
 
-                <!-- ! Card food -->
+                    <!-- ! Card food -->
 
-                <div class="food__card">
-                    <h4 class="food__titre">Pétales de violettes glacés</h4>
+                    <div class="food__card">
+                        <h4 class="food__titre">Pétales de violettes glacés</h4>
 
-                    <div class="food__flex">
-                        <p>Et purée de noisettes</p>
-                        <div class="food__price">18€</div>
+                        <div class="food__flex">
+                            <p>Et purée de noisettes</p>
+                            <div class="food__price">18€</div>
+                        </div>
+
                     </div>
 
-                </div>
+                    <!-- ! fin Card food -->
 
-                <!-- ! fin Card food -->
+                    <div class="food__card">
+                        <h4 class="food__titre">Fondant au chocolat</h4>
 
-                <div class="food__card">
-                    <h4 class="food__titre">Fondant au chocolat</h4>
+                        <div class="food__flex">
+                            <p>Revisité</p>
+                            <div class="food__price">22€</div>
+                        </div>
 
-                    <div class="food__flex">
-                        <p>Revisité</p>
-                        <div class="food__price">22€</div>
                     </div>
 
-                </div>
+                    <!-- ! fin Card food -->
 
-                <!-- ! fin Card food -->
+                    <div class="food__card">
+                        <h4 class="food__titre">Millefeuille croustillant</h4>
 
-                <div class="food__card">
-                    <h4 class="food__titre">Millefeuille croustillant</h4>
+                        <div class="food__flex">
+                            <p>Myrtilles et pâte d’amande</p>
+                            <div class="food__price">23€</div>
+                        </div>
 
-                    <div class="food__flex">
-                        <p>Myrtilles et pâte d’amande</p>
-                        <div class="food__price">23€</div>
                     </div>
 
-                </div>
-
-                <!-- ! fin Card food -->
+                    <!-- ! fin Card food -->
                 </div>
             </section>
             <!-- ? FIN Section food -->
