--- a/menu-la-note-enchantée.html
+++ b/menu-la-note-enchantée.html
@@ -31,7 +31,10 @@
 
             <div class="hero-menu">
                 <h2 class="hero-menu__titre">La note enchantée</h2>
-                <i class=" hero-menu__logo far fa-heart fa-2x"></i>
+                <svg class="heart card__icon" viewBox="0 0 800 700" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="m263.42 235.15c-66.24 0-120 53.76-120 120 0 134.76 135.93 170.09 228.56 303.31 87.574-132.4 228.56-172.86 228.56-303.31 0-66.24-53.76-120-120-120-48.048 0-89.402 28.37-108.56 69.188-19.161-40.817-60.514-69.188-108.56-69.188z" />
+                </svg>
             </div>
 
             <!-- ? Section food entrée -->
@@ -39,61 +42,61 @@
                 <h3>Entrées</h3>
                 <div class="flex-menu">
 
-                <!-- ! Card food -->
+                    <!-- ! Card food -->
 
-                <div class="food__card">
-                    <h4 class="food__titre">Ravioles de foie gras</h4>
+                    <div class="food__card">
+                        <h4 class="food__titre">Ravioles de foie gras</h4>
 
-                    <div class="food__flex">
-                        <p>Accompagnés de leur crème à la truffe
-                        </p>
-                        <div class="food__price">25€</div>
+                        <div class="food__flex">
+                            <p>Accompagnés de leur crème à la truffe
+                            </p>
+                            <div class="food__price">25€</div>
+                        </div>
+
                     </div>
 
-                </div>
+                    <!-- ! fin Card food -->
 
-                <!-- ! fin Card food -->
+                    <div class="food__card">
+                        <h4 class="food__titre">Caviar osciètre</h4>
 
-                <div class="food__card">
-                    <h4 class="food__titre">Caviar osciètre</h4>
+                        <div class="food__flex">
+                            <p>Sur blini à la farine de blé noir
+                            </p>
+                            <div class="food__price">35€</div>
+                        </div>
 
-                    <div class="food__flex">
-                        <p>Sur blini à la farine de blé noir
-                        </p>
-                        <div class="food__price">35€</div>
                     </div>
 
-                </div>
+                    <!-- ! fin Card food -->
 
-                <!-- ! fin Card food -->
+                    <div class="food__card">
+                        <h4 class="food__titre">Homard et espuma de potiron
+                        </h4>
 
-                <div class="food__card">
-                    <h4 class="food__titre">Homard et espuma de potiron
-                    </h4>
+                        <div class="food__flex">
+                            <p>Mariné aux zestes d'orange
+                            </p>
+                            <div class="food__price">20€</div>
+                        </div>
 
-                    <div class="food__flex">
-                        <p>Mariné aux zestes d'orange
-                        </p>
-                        <div class="food__price">20€</div>
                     </div>
 
-                </div>
+                    <!-- ! fin Card food -->
 
-                <!-- ! fin Card food -->
+                    <div class="food__card">
+                        <h4 class="food__titre">Foie gras de canard cuit entier
+                        </h4>
 
-                <div class="food__card">
-                    <h4 class="food__titre">Foie gras de canard cuit entier
-                    </h4>
+                        <div class="food__flex">
+                            <p>Confiture de figue et pain toasté
+                            </p>
+                            <div class="food__price">35€</div>
+                        </div>
 
-                    <div class="food__flex">
-                        <p>Confiture de figue et pain toasté
-                        </p>
-                        <div class="food__price">35€</div>
                     </div>
 
-                </div>
-
-                <!-- ! fin Card food -->
+                    <!-- ! fin Card food -->
 
                 </div>
             </section>
@@ -105,48 +108,48 @@
                 <h3>Plats</h3>
                 <div class="flex-menu">
 
-                <!-- ! Card food -->
+                    <!-- ! Card food -->
 
-                <div class="food__card">
-                    <h4 class="food__titre">Noix de coquilles Saint-Jacques</h4>
+                    <div class="food__card">
+                        <h4 class="food__titre">Noix de coquilles Saint-Jacques</h4>
 
-                    <div class="food__flex">
-                        <p>Sur lit de purée de céleri-rave
-                        </p>
-                        <div class="food__price">40€</div>
+                        <div class="food__flex">
+                            <p>Sur lit de purée de céleri-rave
+                            </p>
+                            <div class="food__price">40€</div>
+                        </div>
+
                     </div>
 
-                </div>
+                    <!-- ! fin Card food -->
 
-                <!-- ! fin Card food -->
+                    <div class="food__card">
+                        <h4 class="food__titre">Langoustine poêlée
+                        </h4>
 
-                <div class="food__card">
-                    <h4 class="food__titre">Langoustine poêlée
-                    </h4>
+                        <div class="food__flex">
+                            <p>Purée de patate douce
+                            </p>
+                            <div class="food__price">35€</div>
+                        </div>
 
-                    <div class="food__flex">
-                        <p>Purée de patate douce
-                        </p>
-                        <div class="food__price">35€</div>
                     </div>
 
-                </div>
+                    <!-- ! fin Card food -->
 
-                <!-- ! fin Card food -->
+                    <div class="food__card">
+                        <h4 class="food__titre">Mijoté de queue de boeuf
+                        </h4>
 
-                <div class="food__card">
-                    <h4 class="food__titre">Mijoté de queue de boeuf 
-                    </h4>
+                        <div class="food__flex">
+                            <p>Et riz sauvage aux zestes de citron
+                            </p>
+                            <div class="food__price">44€</div>
+                        </div>
 
-                    <div class="food__flex">
-                        <p>Et riz sauvage aux zestes de citron
-                        </p>
-                        <div class="food__price">44€</div>
                     </div>
 
-                </div>
-
-                <!-- ! fin Card food -->
+                    <!-- ! fin Card food -->
                 </div>
             </section>
             <!-- ? FIN Section food -->
@@ -157,48 +160,48 @@
                 <h3>Desserts</h3>
                 <div class="flex-menu">
 
-                <!-- ! Card food -->
+                    <!-- ! Card food -->
 
-                <div class="food__card">
-                    <h4 class="food__titre">Macaron noisette et chocolat
-                    </h4>
+                    <div class="food__card">
+                        <h4 class="food__titre">Macaron noisette et chocolat
+                        </h4>
 
-                    <div class="food__flex">
-                        <p>Glace au caramel brun et sel de Guérande
-                        </p>
-                        <div class="food__price">18€</div>
+                        <div class="food__flex">
+                            <p>Glace au caramel brun et sel de Guérande
+                            </p>
+                            <div class="food__price">18€</div>
+                        </div>
+
                     </div>
 
-                </div>
+                    <!-- ! fin Card food -->
 
-                <!-- ! fin Card food -->
+                    <div class="food__card">
+                        <h4 class="food__titre">Baba au rhum revisité
+                        </h4>
 
-                <div class="food__card">
-                    <h4 class="food__titre">Baba au rhum revisité 
-                    </h4>
+                        <div class="food__flex">
+                            <p>Avec son coulis de citron
+                            </p>
+                            <div class="food__price">22€</div>
+                        </div>
 
-                    <div class="food__flex">
-                        <p>Avec son coulis de citron
-                        </p>
-                        <div class="food__price">22€</div>
                     </div>
 
-                </div>
+                    <!-- ! fin Card food -->
 
-                <!-- ! fin Card food -->
+                    <div class="food__card">
+                        <h4 class="food__titre">Tarte au citron meringuée
+                        </h4>
 
-                <div class="food__card">
-                    <h4 class="food__titre">Tarte au citron meringuée 
-                    </h4>
+                        <div class="food__flex">
+                            <p>Déstructurée</p>
+                            <div class="food__price">23€</div>
+                        </div>
 
-                    <div class="food__flex">
-                        <p>Déstructurée</p>
-                        <div class="food__price">23€</div>
                     </div>
 
-                </div>
-
-                <!-- ! fin Card food -->
+                    <!-- ! fin Card food -->
                 </div>
             </section>
             <!-- ? FIN Section food -->
