--- a/menu-a-la-française.html
+++ b/menu-a-la-française.html
@@ -49,7 +49,12 @@
                         <div class="food__flex">
                             <p>Aux zests d'orange</p>
                             <div class="food__price">25€</div>
+                            <div class="wrapper_check">
+                                <i class="fas fa-check-circle fa-2x"></i>
+                            </div>
+                          
                         </div>
+                       
 
                     </div>
 
