--- a/menu-la-note-enchantée.html
+++ b/menu-la-note-enchantée.html
@@ -38,7 +38,7 @@
             </div>
 
             <!-- ? Section food entrée -->
-            <section class="food">
+            <section class="food food_1">
                 <h3>Entrées</h3>
                 <div class="flex-menu">
 
@@ -104,7 +104,7 @@
 
 
             <!-- ? Section food plats -->
-            <section class="food">
+            <section class="food food_2">
                 <h3>Plats</h3>
                 <div class="flex-menu">
 
@@ -156,7 +156,7 @@
 
 
             <!-- ? Section food desserts -->
-            <section class="food">
+            <section class="food food_3">
                 <h3>Desserts</h3>
                 <div class="flex-menu">
 
