--- a/menu-a-la-française.html
+++ b/menu-a-la-française.html
@@ -31,10 +31,19 @@
 
             <div class="hero-menu">
                 <h2 class="hero-menu__titre">À la française</h2>
-                <svg class="heart card__icon" viewBox="0 0 800 700" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="m263.42 235.15c-66.24 0-120 53.76-120 120 0 134.76 135.93 170.09 228.56 303.31 87.574-132.4 228.56-172.86 228.56-303.31 0-66.24-53.76-120-120-120-48.048 0-89.402 28.37-108.56 69.188-19.161-40.817-60.514-69.188-108.56-69.188z" />
-                </svg>
+                <div class="heart card__icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 25 25">
+                        <defs>
+                            <linearGradient id="gradient" x1="0" x2="0" y1="0" y2="1">
+                                <stop offset="0%" stop-color="#9356DC" />
+                                <stop offset="100%" stop-color="#FF79DA" />
+                            </linearGradient>
+                        </defs>
+                        <path
+                            d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z">
+                        </path>
+                    </svg>
+                </div>
             </div>
 
             <!-- ? Section food entrée -->
