--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="card">
                     <a href="./menu-la-palette-du-gout.html">
                         <div class="card__img">
-                            <img src="./public/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Palette du gout">
+                            <img src="./public/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'un plat raffiné à base de saumon">
                             <div class="card__tag">Nouveau</div>
                         </div>
                         <h3>La palette du goût</h3>
@@ -116,7 +116,7 @@
                 <div class="card">
                     <a href="./menu-la-note-enchantée.html">
                         <div class="card__img">
-                            <img src="./public/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                            <img src="./public/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'un plat savoureux à base d'olive">
                             <div class="card__tag">Nouveau</div>
                         </div>
                         <h3>La note enchantée</h3>
@@ -138,7 +138,7 @@
                 <div class="card">
                     <a href="./menu-a-la-française.html">
                         <div class="card__img">
-                            <img src="./public/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+                            <img src="./public/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'une entrée savoureuse à base d'oeuf">
                         </div>
                         <h3>À la française </h3>
                         <div class="card__text">
@@ -159,7 +159,7 @@
 
                         <div class="card__img">
                             <img src="./public/img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                                alt="Le délice des sens">
+                                alt="Un délicieux plat de poisson dans une assiette originale">
                         </div>
                         <h3>Le délice des sens</h3>
                         <div class="card__text">
